release: v0.1.1 chore: update all dependencies version. style: modify some minor style issue and layout. fix: layout issue on mobile screen.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -74,17 +73,13 @@
 
 * {
   scroll-behavior: smooth;
-  font-family:
-    Inter,
-    Kantumruy Pro,
-    sans-serif;
+  transition: background-color 0.3s ease;
+  font-family: "Inter", "Kantumruy Pro", sans-serif;
 }
 
 html {
-  background-color: --background;
-  transition:
-    background-color 0.5s ease,
-    color 0.5s ease;
+  background-color: hsl(var(--background));
+  transition: background-color 0.3s ease;
 }
 
 .fade-enter-active,
